--- a/blood-donor-backend/package.json
+++ b/blood-donor-backend/package.json
@@ -18,6 +18,8 @@
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
